--- a/Source/Zybach.Web/src/styles.scss
+++ b/Source/Zybach.Web/src/styles.scss
@@ -207,3 +207,7 @@ figure.media {
   }
 
   //End of NGB Popover
+
+  .container{
+    max-width: 1800px;
+  }
